# termimon

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PRODUCT_BRIEF.md  README.md  install.sh
.github/actions/termimon-comment/: action.yml
.github/workflows/: ci.yml  release.yml
Formula/: termimon.rb
docs/: commands.html  creatures.html  index.html  install.html  roadmap.html
docs/assets/: style.css
src/: main.rs  plugin.rs  sound.rs  theme.rs
src/agents/: activity.rs  aider.rs  claude.rs  codex.rs  cost.rs  detector.rs  generic.rs  identity.rs  mod.rs  productivity.rs
src/config/: mod.rs
src/creatures/: animation.rs  assignment.rs  evolution.rs  mod.rs  registry.rs  sprites.rs
src/daemon/: heartbeat.rs  mod.rs  notify.rs  server.rs
src/render/: halfblock.rs  mod.rs  text.rs
src/state/: mod.rs
src/stats/: mod.rs
src/team/: battle.rs  client.rs  mdns.rs  mod.rs  peer.rs  protocol.rs  server.rs
src/tmux/: bind.rs  control.rs  mod.rs  pane.rs  status.rs
src/ui/: dashboard.rs  mod.rs  pokedex.rs  team_view.rs
