[package]
name = "termimon"
version = "0.3.1"
edition = "2021"
authors = ["Yan Matagne"]
description = "Your AI agents, alive in the terminal. Pixel creature companions for tmux."
license = "MIT"
repository = "https://github.com/ymatagne/termimon"
keywords = ["terminal", "tmux", "ai", "agents", "pixel-art"]
categories = ["command-line-utilities", "visualization"]
readme = "README.md"
homepage = "https://github.com/ymatagne/termimon"

[dependencies]
anyhow = "1"
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["process", "signal"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
